# InsurGuard-Ai

./: .gitignore  README.md
services/: Makefile  docker-compose.dev.yml  project-services.yml
services/backend-services/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  pyproject.toml
services/backend-services/app/: config.py  main.py  models.py
services/backend-services/app/routers/: chat.py  dashboard.py  upload.py
services/backend-services/app/services/: document_store.py  openai_service.py  rag_service.py
services/frontend-services/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  next.config.js  package.json  tailwind.config.ts
services/frontend-services/src/app/: globals.css  layout.tsx  page.tsx
services/frontend-services/src/components/analytics/: AnalyticsPage.tsx
services/frontend-services/src/components/chat/: ChatInput.tsx  ChatInterface.tsx  ChatMessage.tsx
services/frontend-services/src/components/dashboard/: ActivityFeed.tsx  DashboardPage.tsx  StatCard.tsx
services/frontend-services/src/components/layout/: ChatHistorySidebar.tsx  Header.tsx  Sidebar.tsx
services/frontend-services/src/components/notifications/: NotificationHistoryPanel.tsx  NotificationToast.tsx
services/frontend-services/src/components/providers/: ThemeProvider.tsx
services/frontend-services/src/components/settings/: SettingsPage.tsx
services/frontend-services/src/lib/: api.ts  store.ts  utils.ts
